# ajrasakha

./: .env.example  .env.production.example  .firebaserc  .gitignore  @ai-logs.md  AGENTS.md  CI-READINESS-VERIFICATION.md  LICENSE  PHASE_A_SUMMARY.md  PRODUCT-ANALYSIS.md  PRODUCTION.md  PR_DESCRIPTION.md  PR_DESCRIPTION_PR1.md  PR_DESCRIPTION_PR2.md  PR_DESCRIPTION_PR3.md  PR_DESCRIPTION_PR4.md  PR_DESCRIPTION_PR5.md  PR_DESCRIPTION_PR6.md  README.md  SETUP.md  docker-compose.app.yml  docker-compose.production.yml  docker-compose.pull-build.yml  docker-compose.pull.yml  docker-compose.yml  firebase.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  product.md  project.md  test_imd_endpoints.py
ai/: .env.example  .gitignore  Dockerfile  Dockerfile.mcp  Dockerfile.mcp-torch-gpu  README.md  aegra.json  debug_manipur.py  debug_odisha.py  docker-compose.mcp.yml  docker-compose.portainer.yml  docker-compose.yml  evaluation_report_live.csv  evaluation_report_mock.csv  langgraph.json  language_quality_matrix_mock.csv  multilingual_evaluation_report_mock.csv  pyproject.toml  run.sh  setup.md  standardize_db.py  test_simulate_acc.py  test_synth_debug.py  test_time_disclaimer.py
ai/.deepeval/: .deepeval_telemetry.txt
ai/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  store.pckl
ai/ajrasakha/: Dockerfile  app.py  docker-compose.yml  graph.py  langgraph.json  langgraph_server.py  main.py  pyproject.toml  requirements.txt  test.py.ipynb
ai/ajrasakha/agents/: PLANNER_PRODUCT_DECISIONS.md  ajrasakha.py  answer_body.py  answer_footers.py  answer_quality.py  answer_relevance_checker.py  answer_shortener.py  assemble_answer_body.py  build_crop_master_dictionary.py  chemical_checker_agent.py  config.py  crop_chemical_name.py  crop_chemical_resolver.py  crop_requirement.py  daily_price_agent.py  domains.py  gdb_agent.py  gdb_passthrough.py  language.py  llm_trace.py  location_context.py  market_agent.py  memory.py  non_agriculture_reply.py  orchestrator.py  plan_executor.py  planner.py  planner_rules.py  prompts.py  resolution_trace.py  retrieval_sanitizer.py  schemas.py  schemes_agent.py  soil_agent.py  state.py  summary_agent.py  supervisor_agent.py  synthesizer.py  thread_log_mongo.py  thread_logging.py  (+11 more)
ai/ajrasakha/api/: models.py
ai/ajrasakha/evaluation/: MULTILINGUAL.md  README.md  agricultural_correctness.py  all_tools.py  answer_eval.py  deepeval_metrics.py  domain_report.py  executors.py  failure.py  gdb_fixtures.py  gdb_match_score.py  judge.py  langsmith_trace.py  language_matrix.py  language_metrics.py  language_recommendations.py  language_summary.py  multilingual_cases.py  nodes.py  plan.py  questions.py  report.py  retrieval_context_extractor.py  routing.py  run.py  run_ground_truth.py  schema.sql  storage.py  stream_debug.py  summary.py  tech.py  test_deepeval.py  tool.py  trace.py  triage.py
ai/ajrasakha/graph/: graph.py  graph_old.py  state.py
ai/ajrasakha/tools/: __init__.py
ai/ajrasakha/utils/: __init__.py  embedding_model.py  vector_store.py
ai/multilingual_reports/: multilingual_matrix_mock_20260723_172219.csv  multilingual_matrix_mock_20260723_172300.csv  multilingual_report_mock_20260723_172219.html  multilingual_report_mock_20260723_172300.html  multilingual_results_mock_20260723_172219.csv  multilingual_results_mock_20260723_172300.csv
ai/tests/: README.md  run_stable_suite.py  run_whatsapp_e2e.py  test_agricultural_correctness.py  test_answer_eval.py  test_domain_report.py  test_gdb_fixtures.py  test_gdb_match_score.py  test_gdb_match_score_discrimination.py  test_retrieval_context_extractor.py  test_run_ground_truth_end_to_end.py  test_stable_suite_layer4.py  test_storage_sqlite.py
ai/tests/api/: run_api_contracts.py
ai/tests/fixtures/: gdb_ground_truth_discrimination.json  gdb_ground_truth_sample.json  gdb_ground_truth_sample_6domains.json  gdb_ground_truth_sample_greetings_schemes.json  gdb_ground_truth_sample_multidomain.json  sample_eval_cases.json
ai/tests/harnesses/: test_deepeval_isolated.py
ai/tests/mcp/: mcp_connectivity.py
ajrasakha/: .env.example  .gitignore  Dockerfile  api.py  constants.py  functions.py  graph_store.py  helpers.py  models.py  proxy.py  pyproject.toml  rag_eval_log.csv
ajrasakha/ce/retrievers/: basic.py
mcp/: .env.example  .gitignore  LLM_Benchmarking_Pipeline.ipynb  agricultural.py  banned_items.py  data-testing.py  faq.py  gd.py  market.py  pop.py  pyproject.toml  server.py  test_state_masters.py  utils.py  values.py  weather.py
mcp/acc_api/: .env.example  README.md  apiGuide.md  diagnose.py  main.py  requirements.txt
mcp/faq/: README.md  constants.py  functions.py  models.py  server.py
mcp/imd_weather_api_wrapper/: Dockerfile  ReadMe.md  TESTING.md  pyproject.toml  requirements.txt  run_curl_smoke_test.ps1  run_server_poetry.ps1
mcp/imd_weather_api_wrapper/api/: main.py
mcp/imd_weather_api_wrapper/wrapper/: __init__.py  client.py  config.py  router.py
mcp/langgraph-openai-adapter/: .env.example  config.py  docker-compose.yml  langgraph_bridge.py  mongo_user.py  requirements.txt  reviewer_question.py  test_reviewer_question.py
mcp/mcp_containers/: docker-compose.yml
mcp/nodes/: values.py
mcp/other_markets/: Dockerfile  azadpur_apmc.py  client.py  commodities.py  delhi_apmc.py  districts.json  docker-compose.yml  get_data.py  html_parser.py  mandi.py  market_data_gov.py  requirements.txt  server.py  spices_board.py  unified_mandi_prices.py
mcp/proxy_api/: intent.py  main.py  multilingual.py
mcp/scripts/: ingest_csv_faq.py
mcp/src/market/: api.py  (+1 more)
mcp/state_masters/: __init__.py  base_fetcher.py  chattisgarh.py  delhi.py  haryana_mandi_master.py  hp.py  jk_mandi_master.py  manipur_mandi_master.py  mizoram.py  odisha_mandi_master.py
mcp/systemd/: QUICKSTART.md  README.md  fix-weather-keys.sh  install.sh  manage.sh  mcp-faq.service  mcp-gd.service  mcp-market.service  mcp-pop.service  mcp-server.service  mcp-weather.service  setup-weather-keys.sh  status-check.sh  uninstall.sh
(+2379 files in other folders)
