[project]
name = "ajrasakha-ai"
version = "0.1.0"
description = "AI agent system for agricultural domain applications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-mongodb>=0.2.0",
    "langchain-qwq>=0.1.0",
    "langgraph>=1.1.4,<5.0.0",
    "langgraph-checkpoint>=2.0.0,<5.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.10.0",
    "python-dotenv>=1.0.0",
    "pymongo>=4.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "fastmcp>=3.1.1",
    "ipykernel>=7.2.0",
    "sentence-transformers>=2.6.0",
    "langchain-mcp-adapters",
    "langchain-anthropic>=1.4.1",
    "motor>=3.7.1",
    "rapidfuzz>=3.0.0",
    "unicodedataplus>=16.0.0",
    "deepeval>=4.0.0",  # PR1: DeepEval metrics (AnswerRelevancy, Faithfulness, ContextualRelevancy). Tested against 4.0.7.
    "ollama>=0.4.0",    # PR1: local judge backend via EVAL_JUDGE=ollama. Only needed for local real-score evaluation, not required for mock/anthropic.
    "psycopg2-binary>=2.9.0",  # PR3: Postgres driver for storage.py save_eval_results / get_recent_results. Pure-binary build, no libpq system dep.
] 

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ajrasakha"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["ajrasakha"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.26",
]
