[project]
name = "ajrasakha"
version = "0.1.0"
description = "An agri-centric data pipe for use with varioud LLMs and LLM based applications."
authors = [
    {name = "Aditya BMV"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
