[project]
name = "ajrasakha"
version = "0.1.0"
description = "An agri-centric data pipeline for use with various LLMs and LLM based applications."
authors = [
    {name = "Aditya BMV"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "llama-index (>=0.14.0,<0.15.0)",
    "llama-index-embeddings-huggingface (>=0.6.1,<0.7.0)",
    "llama-index-llms-ollama (>=0.7.3,<0.8.0)",
    "llama-index-vector-stores-mongodb (>=0.8.1,<0.9.0)",
    "pymongo (>=4.15.0,<5.0.0)",
    "ollama (>=0.5.3,<0.6.0)",
    "llama-index-graph-stores-neo4j (>=0.5.1,<0.6.0)",
    "neo4j (>=5.28.2,<6.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "markdown (>=3.9,<4.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydub (>=0.25.1,<0.26.0)",
    "fastmcp (>=2.12.3,<3.0.0)",
    "markdownify (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
