[project]
name = "ajrasakha-bot"
version = "0.0.1"
description = "AjraSakha LangGraph Orchestrator"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "langgraph",
    "langchain-core",
    "langchain-anthropic",
    "pydantic",
    "python-dotenv",
    "pymongo"
]

[build-system]
requires = ["setuptools>=73.0"]
build-backend = "setuptools.build_meta"