[tool.poetry]
name = "imd-weather-api-wrapper"
version = "1.0.0"
description = "REST API wrapper for India Meteorological Department (IMD) weather endpoints, built from analysis of 15.5M farmer weather queries from the KCC dataset."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "ReadMe.md"
packages = [
    { include = "api" },
    { include = "wrapper" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = ">=0.110.0"
uvicorn = ">=0.29.0"
httpx = ">=0.27.0"
requests = ">=2.31.0"
pandas = ">=2.0.0"
matplotlib = ">=3.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
