[project]
name = "agri-mcp-servers"
version = "0.1.0"
description = "Split MCP servers for Agmarknet and Soil Health backends"
authors = [
    { name = "Shaurya", email = "Shauryamhr9@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastmcp>=2.12.3,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "python-dotenv>=1.0.1,<2.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
